backend/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: seaclub.com
      http:
        paths:
          - path: /api-docs/?(.*)
            pathType: Prefix
            backend:
              service:
                name: swagger-ui-srv
                port:
                  number: 5010
          - path: /api/v1/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 5000
          - path: /api/v1/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 5001
          - path: /api/v1/analytics/?(.*)
            pathType: Prefix
            backend:
              service:
                name: analytic-srv
                port:
                  number: 5002
          - path: /api/v1/projects/?(.*)
            pathType: Prefix
            backend:
              service:
                name: project-srv
                port:
                  number: 5003
